# personal-website-backend

./: .env.example  .gitignore  README.md  Styrokai.tmTheme  build.sh  makefile  nginx.conf  package-lock.json  package.json
assets/: architecture.xml
assets/blog/entries/: wasm-react-ts.yaml
blog_processing/: index.js  package-lock.json  package.json
home/: package-lock.json  package.json
home/src/: index.tsx
home/src/components/: header.tsx  home.tsx
home/src/components/home/: about.tsx  projects.tsx
home/src/css/: app.css  header.css  index.css  pages.css  projects.css
public/: index.html
server/: .gitignore  Cargo.toml
server/src/: admin.rs  admin_blog.rs  blog.rs  db.rs  embeds.rs  main.rs  public_blog.rs  submission.rs
src/: index.tsx
src/components/: app.tsx  blog.tsx  header.tsx  home.tsx
src/components/home/: about.tsx  contact.tsx  projects.tsx
src/css/: app.css  header.css  index.css  pages.css  projects.css  text.css
src/helpers/: form.ts  video.ts
src/videos/: videos.d.ts
www/: package-lock.json  package.json
www/public/: index.html
www/scripts/: watch.js
www/src/: index.tsx
www/src/components/: 404.tsx  error.tsx  header.tsx  loading.tsx  main.tsx  styled_link.tsx  thank_you.tsx  title.tsx  wrapper.tsx
www/src/components/admin/: admin_blog_page.tsx  delete_post.tsx  edit_post.tsx  index.tsx  panel.tsx  sign_in.tsx
www/src/contexts/: auth_context.tsx
www/src/css/: index.css
www/src/data/: blog.ts
www/src/helpers/: change_post.ts  colors.ts  delete_post.ts  form.ts  format_date.ts  validate_key.ts
www/src/hooks/: useBg.ts  useBlogEntries.ts  useBlogPost.ts  useWindowSize.ts
www/src/videos/: videos.d.ts
(+13 files in other folders)
