[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Li <30177086+MonliH@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = { version = "3", features = ["openssl"]}
actix-files = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.18", features = ["serde"] }
serde_yaml = "0.8"
serde_json = "1"
dotenv = "0.15"
config = "0.10"
mongodb = "1"
tokio = { version = "0.2", features = ["stream"] }
openssl = "0.10.30"
